feat: add profile with avatar and name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 
   <body>
     <div id="container">
-      
+
+      <div id="profile">
+        <img src="./assets/avatar-dark.png" alt="Imagem de Mayk Brito" />
+        <span>&#64;maykbrito</span>
+      </div>
+
     </div>
   </body>
 </html>
