feat: add switch with track and toggle button of the theme

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <span>&#64;maykbrito</span>
       </div>
 
+      <div id="switch">
+        <span><button></button></span>
+      </div>
+
     </div>
   </body>
 </html>
