feat: add redirect buttons to external links

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
         <span><button></button></span>
       </div>
 
+      <div id="links">
+        <ul>
+          <li><a href="#">Inscreva-se no NLW</a></li>
+          <li><a href="#">Baixe meu e-book</a></li>
+          <li><a href="#">Veja meu portfólio</a></li>
+          <li><a href="#">Conheça o Explorer</a></li>
+        </ul>
+      </div>
+
     </div>
   </body>
 </html>
