--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
       </div>
 
+      <footer>
+        <p>Feito com ♥ por Kauan Carvalho</p>
+      </footer>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
