--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <div id="switch">
-        <span><button></button></span>
+        <span><button onclick="toggleMode()"></button></span>
       </div>
 
       <div id="links">
@@ -50,5 +50,7 @@
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+    <script src="./script.js"></script>
   </body>
 </html>
